--- a/EducationProgect/EducationProgect/pages/main page/index.html
+++ b/EducationProgect/EducationProgect/pages/main page/index.html
@@ -130,10 +130,53 @@
                         Lorem ipsum dolor sit, amet consectetur <br>
                         adipisicing elit. Pariatur alias, architecto <br>
                         repellendus et facilis sed?
-                        <div class="bottom-link white-txt"><a href="#">Розпочати</a></div>
+                        <div class="bottom-link white-txt"><a href="#">Start a test</a></div>
                     </p>
                 </div>
             </section>
+
+            <footer>
+            <div class="footer-block">
+                <div class="footer-block-title">USEFUL LINKS</div>
+                <div class="footer-block-content">
+                    <ul>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Ispum</a></li>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Ispum</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="footer-block-title">DEVELOPED BY</div>
+                <div class="footer-block-content">
+                    <ul>
+                        <li><a href="#">Yaryna</a></li>
+                        <li><a href="#">Oksana</a></li>
+                        <li><a href="#">Vasil</a></li>
+                        <li><a href="#">Andrii</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="footer-block-title">Feedback</div>
+                <div class="footer-block-content">
+                    <ul>
+                        <li><a href="#">englishlearnning@edu.ua</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="footer-block-title">SUPPORT</div>
+                <div class="footer-block-content">
+                    <ul>
+                        <li><a href="#">Support Center</a></li>
+                    </ul>
+                </div>
+            </div>
+            
+            
+        </footer>
 
         </main>
 
